crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fun func(a: Num, b, c: Bool): Num {}\"))"
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                0..36,
            ),
            (
                "fun",
                0..3,
            ),
            (
                "func",
                4..8,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            9..9,
                        ),
                        (
                            "a",
                            9..10,
                        ),
                        (
                            Num,
                            12..15,
                        ),
                    ),
                    9..15,
                ),
                (
                    Generic(
                        (
                            false,
                            17..16,
                        ),
                        (
                            "b",
                            17..18,
                        ),
                    ),
                    17..18,
                ),
                (
                    Typed(
                        (
                            false,
                            20..19,
                        ),
                        (
                            "c",
                            20..21,
                        ),
                        (
                            Bool,
                            23..27,
                        ),
                    ),
                    20..27,
                ),
            ],
            Some(
                (
                    Num,
                    30..33,
                ),
            ),
            [],
        ),
        0..36,
    ),
]
