crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"fun\"))"
---
(
    Some(
        [
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        0..3,
                    ),
                    (
                        "fun",
                        0..3,
                    ),
                    (
                        "",
                        3..3,
                    ),
                    [],
                    None,
                    [],
                ),
                0..3,
            ),
        ],
    ),
    [
        Expected function name at 3..3,
        found end of input at 3..3 expected something else, or '"("',
        found end of input at 3..3 expected something else, '":"', or '"{"',
    ],
)
