crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_def.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"fun func() {}\"))"
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                0..13,
            ),
            (
                "fun",
                0..3,
            ),
            (
                "func",
                4..8,
            ),
            [],
            None,
            [],
        ),
        0..13,
    ),
]
