crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"func(1 2) 3\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    5..6,
                                                ),
                                            ),
                                            5..6,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    7..8,
                                                ),
                                            ),
                                            7..8,
                                        ),
                                    ],
                                    None,
                                ),
                                0..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                Number(
                                    (
                                        3.0,
                                        10..11,
                                    ),
                                ),
                                10..11,
                            ),
                        ),
                        10..11,
                    ),
                ),
                10..11,
            ),
        ],
    ),
    [
        found '"2"' at 7..8 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '","',
    ],
)
